--- a/_publications/2022yolo.md
+++ b/_publications/2022yolo.md
@@ -6,7 +6,7 @@ category: conferences
 excerpt: 'A comparison of the performance of the latest versions of the YOLO model on fisheye images. This article served as the foundation for the following article on tracking.'
 date: 2022-01-01
 venue: 'International Conference on Image Analysis and Processing - ISHAPE Workshop'
-slidesurl: 'http://nathanod.github.io/files/yolo_slides.pdf'
+slidesurl: 'http://nathanod.github.io/files/2022yolo_slides.pdf'
 paperurl: 'https://imt-mines-ales.hal.science/hal-03676679/file/performance_YOLO_fisheye_HAL.pdf'
 #bibtexurl: 'http://academicpages.github.io/files/bibtex1.bib'
 #citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'
